--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import "./blocks/header.scss";
 @import "./blocks/container.scss";
 @import "./blocks/actual.scss";
+@import "./blocks/lection.scss";
 
 body {
   box-sizing: border-box;
