changes was added

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -45,12 +45,14 @@
     background-size: cover;
 
     @include onTablet {
+      background-image: url(../images/museum-m.png);
       order: 2;
       width: 50%;
       height: 384px;
     }
 
     @include onDesktop {
+      background-image: url(../images/museum-l.png);
       grid-column: 6 / -1;
       height: 655px;
       width: 100%;
@@ -102,6 +104,7 @@
       font-size: 72px;
       margin-top: 206px;
       margin-left: 55px;
+      margin-bottom: 0;
     }
   }
 
@@ -153,6 +156,32 @@
         width: 70px;
         height: 70px;
       }
+    }
+  }
+
+  &__notice {
+    align-items: center;
+    transform: rotate(-90deg);
+    gap: 20px;
+    display: none;
+
+    @include onDesktop {
+      display: flex;
+      position: absolute;
+      top: 580px;
+    }
+
+    &-line {
+      width: 70px;
+      height: 1px;
+      background-color: $darkGreen;
+    }
+
+    &-text {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 100%;
+      color: $grey;
     }
   }
 }
