--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -83,6 +83,7 @@
       background-repeat: no-repeat;
       background-position: center;
       cursor: pointer;
+      border: none;
 
       @include onTablet {
         height: 70px;
