--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -60,7 +60,7 @@
       line-height: 100%;
       color: #687480;
       margin-left: 20px;
-      @include hover(color, #f14a27);
+      // @include hover(color, #f14a27);
 
       &-line {
         display: block;
@@ -69,15 +69,16 @@
         background-color: $green-col;
         transform: rotate(90deg) translate(-43px, 60px);
         position: absolute;
+        @include hover(background-color, #f14a27);
       }
 
-      &:hover > .header__add-info-line {
+      &:hover > &-line {
         background-color: #f14a27;
       }
 
-      &:hover {
-        color: #f14a27;
-      }
+      // &:hover {
+      //   color: #f14a27;
+      // }
     }
   }
 
