--- a/src/styles/blocks/tiquets.scss
+++ b/src/styles/blocks/tiquets.scss
@@ -31,6 +31,7 @@
   &__botton {
     display: grid;
     place-items: center;
+    cursor: pointer;
     background-color: #fff;
     border: 1px solid $green-col;
     width: 230px;
@@ -68,6 +69,7 @@
   &__botton-2 {
     display: grid;
     place-items: center;
+    cursor: pointer;
     background-color: $green-col;
     color: #fff;
     width: 50px;
