--- a/src/styles/blocks/classicism.scss
+++ b/src/styles/blocks/classicism.scss
@@ -3,6 +3,8 @@
     position: relative;
     background-image: url(../images/Rectangle_20.3.png);
     width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
     height: 210px;
     background-size: cover;
     background-position: center;
