some changes added

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -130,7 +130,8 @@
     color: $almostBlack;
   }
 
-  &__contacts-info {
+  &__contacts-info-link {
+    text-decoration: none;
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
