--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -68,6 +68,10 @@
       color: $grey;
       text-indent: 24px;
 
+      &:focus {
+        outline-color: $orange;
+      }
+
       @include onTablet {
         width: 374px;
         height: 70px;
