--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,8 @@
 @import "./blocks/container.scss";
 @import "./blocks/actual.scss";
 @import "./blocks/lection.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
 
 body {
   box-sizing: border-box;
