section events & lesson

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,12 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "reset";
+@import "page";
+
+@import "blocks/grid";
+@import "blocks/container";
+
+@import "blocks/header";
+@import "blocks/events";
+@import "blocks/lesson";
