--- a/src/styles/blocks/lesson.scss
+++ b/src/styles/blocks/lesson.scss
@@ -1,5 +1,5 @@
 .lesson {
-  background:center/ cover no-repeat url(../images/3.png);
+  background: center/ cover no-repeat url(../images/3.png);
   height: 210px;
 
   @include onTablet {
@@ -24,7 +24,7 @@
   &__body {
     max-width: 570px;
     background-color: #fff;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     transform: translateY(50%);
   }
