--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,13 +1,11 @@
 .events {
 
-
   &__img--container {
     width: 100%;
     height: 210px;
     overflow: hidden;
 
     margin-bottom: 16px;
-
 
     @include onTablet {
       height: 520px;
@@ -35,18 +33,17 @@
   }
 
   &__type {
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
     line-height: 100%;
     color: #687480;
-
   }
 
   &__date {
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 700;
     line-height: 150%;
-    color: #1A5A4C;
+    color: #1a5a4c;
 
   }
 
@@ -59,15 +56,15 @@
   }
 
   &__text {
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 300;
     line-height: 150%;
-    color: #4E4E4E;
+    color: #4e4e4e;
 
     margin-bottom: 60px;
 
     @include onTablet {
-    margin-bottom: 112px;
+      margin-bottom: 112px;
     }
 
     @include onDesktop {
