--- a/src/styles/blocks/lesson.scss
+++ b/src/styles/blocks/lesson.scss
@@ -2,13 +2,15 @@
   background: center/ cover no-repeat url(../images/3.png);
   height: 210px;
 
+  margin-bottom: 150px;
+
   @include onTablet {
-    margin: 0 34px;
+    margin: 0 34px 150px;
     height: 390px;
   }
 
   @include onDesktop {
-    margin: 0;
+    margin: 0 0 150px;
     height: 550px;
   }
 
