--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,5 @@
 @import "blocks/header";
 @import "blocks/events";
 @import "blocks/lesson";
+@import "blocks/gallery";
+@import "blocks/subscribe";
