necessary changes was added

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -42,7 +42,7 @@
         display: block;
         height: 24px;
         width: 12px;
-        background-image: url(../images/Facebook.png);
+        background-image: url(../images/Facebook-svg.svg);
         background-repeat: no-repeat;
         margin-right: 28px;
 
@@ -55,7 +55,7 @@
         display: block;
         height: 24px;
         width: 24px;
-        background-image: url(../images/Insta.png);
+        background-image: url(../images/insta-svg.svg);
         background-repeat: no-repeat;
       }
     }
