--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -125,7 +125,11 @@
       margin-left: 200px;
     }
 
-    &-text {
+    &-button {
+      text-decoration: none;
+    }
+
+    &-button-text {
       font-weight: 500;
       font-size: 16px;
       line-height: 100%;
@@ -137,6 +141,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      transition: all 0.5s;
+
+      &:hover {
+        background-color: $darkGreen;
+        color: #fff;
+      }
 
       @include onTablet {
         height: 70px;
@@ -151,6 +161,7 @@
       background-image: url(../images/more.png);
       background-repeat: no-repeat;
       background-position: center;
+      transition: background-size 1s;
 
       @include onTablet {
         width: 70px;
