--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -22,6 +22,7 @@
     position: absolute;
     transform: translateY(60%);
     bottom: 0;
+    min-width: 280px;
     height: 140px;
     background-color: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
@@ -29,6 +30,7 @@
 
     @include onTablet {
       height: 204px;
+      min-width: 570px;
       padding: 45px 55px 0;
       box-sizing: border-box;
     }
