--- a/src/styles/blocks/museum.scss
+++ b/src/styles/blocks/museum.scss
@@ -38,9 +38,8 @@
   &__action {
     display: none;
     position: absolute;
-    left: 0;
 
-    transform: rotate(270deg) translateX(60px);
+    transform: rotate(270deg) translateX(60px, -386px);
 
     @include onDesktop {
       display: flex;
