--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,7 +6,8 @@ html {
   background: $c-gray;
 
   &__body {
-    margin: 0;
+    margin: 0 auto;
+    max-width: 1280px;
 
     &--with-menu {
       overflow: hidden;
