--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -14,6 +14,8 @@
     align-items: center;
     margin-top: 10px;
 
+    max-width: 1280px;
+
     @include onTablet {
       margin-top: 15px;
     }
