--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "./blocks/lection.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/slider.scss";
+@import "./blocks/subscription.scss";
 
 body {
   box-sizing: border-box;
