--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -10,7 +10,12 @@
   &__img {
     width: $logo-width;
   }
-  
+
+  &__img-l {
+    height: 72px;
+    width: auto;
+  }
+
   &-M {
     width: 63px;
     height: 72px;
