--- a/src/styles/blocks/page-container.scss
+++ b/src/styles/blocks/page-container.scss
@@ -52,4 +52,18 @@
       margin-bottom: 104px;
     }
   }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+    
+    &:target {
+      transform: translateX(0);
+    }
+  }
 }
