--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,4 @@
 @import "./blocks/page-container.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/menu.scss";
