--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -6,3 +6,7 @@ $almostBlack: #0f0e08;
 $grey: #687480;
 $darkGreen: #1a5a4c;
 $orange: #f14a27;
+$cross-size: 18px;
+$menu-padding: 24px;
+$menu-padding-tab: 38px;
+$menu-padding-desk: 58px;
