--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -5,6 +5,7 @@
   text-align: center;
   position: relative;
   transition: $transition;
+  cursor: pointer;
 
   &::after {
     position: absolute;
@@ -20,6 +21,17 @@
   &:hover {
     color: #fff;
   }
+
+  &--sub {
+    &::after {
+      background: #fff;
+    }
+
+    &:hover {
+      color: #f14a27;
+    }
+  }
+  
 
   &:hover:after {
     width: 100%;
