--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -2,6 +2,8 @@
   background: center/ cover no-repeat url(../images/subscribe.png);
   height: 390px;
 
+  margin-bottom: 50px;
+
   &__body {
     display: flex;
     flex-direction: column;
