--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import "./blocks/gallery.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
 
 body {
   box-sizing: border-box;
