--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -176,4 +176,19 @@
       }
     }
   }
+
+  &__links {
+    transition: border-bottom 0.3s;
+     &:hover {
+       border-bottom: 2px solid #f14a27;
+     }
+  }
+
+  &__icons-img {
+    transition: transform 1s;
+
+    &:hover {
+      transform: rotate(360deg) scale(1.3);
+    }
+  }
 }
