--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -67,10 +67,15 @@
       line-height: 100%;
       color: #687480;
     }
+
+    &:focus {
+      border: 2px solid #f14a27;
+    }
   }
 
-  &__btn {
+  &__btn-wrp {
     width: 20%;
+    border: none;
     background: center/ 40% no-repeat url("../images/icons/arrow-right.png") #f14a27;
 
     transition: transform 0.3s;
