--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,12 +1,28 @@
 .page {
-  scroll-behavior: smooth;
-
   font-family: "IBM Plex Sans", sans-serif;
 
   &__body {
     background: #fff;
     color: #0f0e08;
   }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+
+    &:target {
+      transform: translateX(0);
+    }
+  }
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .title {
@@ -43,6 +59,7 @@
   align-items: center;
 }
 
-.menu {
+.menu-cursor {
   cursor: pointer;
 }
+
