--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "blocks/container";
 
 @import "blocks/header";
+@import "blocks/menu";
 @import "blocks/events";
 @import "blocks/lesson";
 @import "blocks/gallery";
