Fixes after review

--- a/src/styles/blocks/museumart.scss
+++ b/src/styles/blocks/museumart.scss
@@ -42,7 +42,7 @@
     display: none;
     position: absolute;
     left: 0;
-    bottom: 60px;
+    top: 600px;
     gap: 20px;
     align-items: center;
     transform: rotate(-90deg);
