--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,6 +2,8 @@
   background: $background-page;
   scroll-behavior: smooth;
   min-width: 320px;
+  max-width: 2560px;
+  margin: 0 auto;
 
   &__nav {
     position: fixed;
