--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,34 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "variables";
+@import "mixins";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page";
+@import "blocks/exends";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/logo";
+@import "blocks/title";
+@import "blocks/angle";
+@import "blocks/hat";
+@import "blocks/hats";
+@import "blocks/event";
+@import "blocks/exhibition";
+@import "blocks/name";
+@import "blocks/text";
+@import "blocks/image";
+@import "blocks/lecture";
+@import "blocks/gallery";
+@import "blocks/subscription";
+@import "blocks/inform";
+@import "blocks/chain";
+@import "blocks/contacts";
+@import "blocks/schedule";
+@import "blocks/adress";
+@import "blocks/circle";
+@import "blocks/bottom";
+@import "blocks/navigate";
+@import "blocks/footer";
+@import "blocks/ticket";
+@import "blocks/mail";
+@import "blocks/grid";
+@import "blocks/container";
+@import "blocks/events";
