--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,56 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 100%;
+  text-align: center;
+  color: $black;
+
+  @include onTablet{
+    font-size: 54px;
+    line-height: 120%;
+    text-align: left;
+  }
+
+  @include onDesktop{
+    font-size: 72px;
+    line-height: 120%;
+  }
+}
+
+%h2{
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  text-align: center;
+  color: $batton-text;
+
+  @include onTablet{
+    font-size: 48px;
+    text-align: left;
+  }
+}
+
+%h3{
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
   font-weight: 400;
+  font-size: 28px;
+  line-height: 100%;
+  color: $batton-text;
+
+  @include onTablet{
+    font-size: 36px;
+  }
+}
+
+%text_footer{
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
 }
