--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -104,4 +104,10 @@
 
     color: $gray;
   }
+
+  &__description{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
