--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -71,6 +71,11 @@
       width: 55%;
       height: 655px;
     }
+
+    @include onTheDesign{
+      right: 20%;
+      max-width: 725px;
+    }
   }
 
   &__flex-container {
