--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,21 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/reset";
+@import "blocks/container";
+@import "blocks/grid";
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/icon";
+@import "blocks/logo";
+@import "blocks/top-action";
+@import "blocks/button";
+@import "blocks/featured-text";
+@import "blocks/menu";
+@import "blocks/events";
+@import "blocks/gallery";
+@import "blocks/slider";
+@import "blocks/pagination";
+@import "blocks/subscription";
+@import "blocks/footer";
+@import "blocks/nav";
