--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,28 @@
 h1 {
   @extend %h1;
 }
+
+h2 {
+  @extend %h2;
+}
+
+h3 {
+  @extend %h3;
+}
+
+p {
+  @extend %p;
+}
+
+a {
+  @extend %a;
+}
+
+input {
+  @extend %input;
+}
+
+span {
+  @extend %span;
+}
+
