--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,44 @@
+%h1,
+%h2,
+%h3,
+%h4,
+%input {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+}
+
+%a,
+%p,
+%span {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+}
+
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-weight: bold;
+  font-size: 72px;
+  line-height: 86px;
+  color: #000;
+}
+
+%h2 {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 48px;
+  color: $hColor;
+}
+
+%h3 {
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 36px;
+  color: $hColor;
+}
+
+%input {
+  color: $spanColor;
+}
+
+%p {
+  color: $pColor;
 }
