--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,16 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin tabletScreen {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin desktopScreen {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
