--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -8,7 +8,6 @@
     @include onTablet {
       flex-direction: column;
       justify-content: start;
-
     }
   }
 
@@ -22,6 +21,12 @@
     width: 70px;
     display: flex;
     justify-content: space-between;
+
+    &_icon {
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
   }
 
   &__title {
@@ -83,6 +88,14 @@
     @include onTablet {
       flex-direction: row-reverse;
       justify-content: space-between;
+    }
+  }
+
+  &__link {
+    &:hover {
+      color: $grean;
+      border-bottom: 1px solid $grean;
+      font-size: 16px;
     }
   }
 }
