--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,5 +1,4 @@
 .events {
-
   &__exhibition {
     margin-bottom: 60px;
 
@@ -11,7 +10,7 @@
       margin-bottom: 104px;
     }
   }
-  
+
   &__title {
     font-size: 36px;
     line-height: 36px;
@@ -37,7 +36,7 @@
     min-width: 280px;
     max-height: 520px;
     overflow: hidden;
-    
+
     margin-bottom: 16px;
 
     @include tabletScreen {
@@ -78,11 +77,10 @@
 
     @include tabletScreen {
       max-width: fit-content;
-     
     }
- 
+
     @include desktopScreen {
-       align-self: center;
+      align-self: center;
     }
   }
 
@@ -128,10 +126,6 @@
       line-height: 36px;
       margin-bottom: 15px;
     }
-
-    @include desktopScreen {
-
-    }
   }
 
   &__info {
@@ -173,7 +167,7 @@
       transition: 0.3s;
       transform: scale(1.1);
     }
-    
+
     @include tabletScreen {
       bottom: -300px;
     }
@@ -181,11 +175,11 @@
     @include desktopScreen {
       bottom: -450px;
     }
-    
+
     max-width: 280px;
     text-align: center;
     background-color: #fff;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     padding: 20px 0;
 
     @include tabletScreen {
@@ -198,7 +192,6 @@
       padding-left: 100px;
       padding-right: 100px;
     }
-   
   }
 
   &__lecture-type {
