--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,11 +1,11 @@
 .menu {
   background-color: #fff;
-  
+
   &__content {
     padding-top: 45px;
   }
 
-  &__header{
+  &__header {
     display: flex;
     justify-content: space-between;
 
@@ -13,12 +13,10 @@
   }
 
   &__img {
-
     @include tabletScreen {
       height: 24px;
       width: 24px;
     }
-    
   }
 
   &__list {
@@ -38,10 +36,11 @@
     border-bottom: 1px solid transparent;
     padding-bottom: 8px;
     width: fit-content;
-    
+
     &:hover {
       transition: 0.5s;
-      border-bottom: 1px solid $hColor;
+      color: $elementColor;
+      border-bottom: 1px solid $elementColor;
     }
 
     @include tabletScreen {
