--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,5 +1,4 @@
 .nav {
-
   &__list {
     list-style: none;
   }
@@ -16,7 +15,8 @@
 
     &:hover {
       transition: 0.5s;
-      border-bottom: 1px solid $hColor;
+      color: $elementColor;
+      border-bottom: 1px solid $elementColor;
     }
-    }
+  }
 }
