--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -18,16 +18,18 @@
   }
 
   &__menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    bottom: 0;
     height: 100%;
     transform: translateX(-100%);
     transition: transform 0.3s;
 
     &:target {
       transform: translateX(0);
+      z-index: 1;
     }
   }
 
@@ -44,7 +46,6 @@
   }
 
   &__lecture {
-
     @include tabletScreen {
       margin: 0 34px;
     }
@@ -52,7 +53,6 @@
     @include desktopScreen {
       margin: 0;
     }
-    
   }
 
   &__gallery {
