--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,5 @@
-$hColor: #0F0E08;
-$pColor: #4E4E4E;
+$hColor: #0f0e08;
+$pColor: #4e4e4e;
 $spanColor: #687480;
-$elementColor: #1A5A4C;;
-$squareColor: #F14A27
+$elementColor: #1a5a4c;
+$squareColor: #f14a27;
