--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -59,8 +59,8 @@
         -moz-box-shadow: 1px 1px 5px #999;
         -webkit-box-shadow: 1px 1px 5px #999;
         box-shadow: 1px 1px 5px #999;
-        -webkit-transition: all .2s ease;
-        transition: all .2s ease;
+        -webkit-transition: all 0.2s ease;
+        transition: all 0.2s ease;
       }
     }
 
