--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -69,6 +69,11 @@
     object-position: center;
 
     margin-bottom: 20px;
+
+    &:hover {
+      transition: 0.3s;
+      transform: scale(1.1);
+    }
   }
 
   &__content {
