--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -51,17 +51,18 @@
     object-fit: contain;
     cursor: pointer;
 
+    &:hover {
+      -moz-box-shadow: 1px 1px 5px #999;
+      -webkit-box-shadow: 1px 1px 5px #999;
+      box-shadow: 1px 1px 5px #999;
+      -webkit-transition: all 0.2s ease;
+      transition: all 0.3s ease;
+      transform: scale(1.05);
+    }
+
     @include tabletScreen {
       object-fit: cover;
       object-position: top;
-
-      &:hover {
-        -moz-box-shadow: 1px 1px 5px #999;
-        -webkit-box-shadow: 1px 1px 5px #999;
-        box-shadow: 1px 1px 5px #999;
-        -webkit-transition: all 0.2s ease;
-        transition: all 0.2s ease;
-      }
     }
 
     @include desktopScreen {
