--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,4 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/vars";
+@import "./utils/mixins";
+@import "./utils/reset.scss";
+@import "./bloks.scss/header.scss";
