--- a/src/styles/bloks.scss/header.scss
+++ b/src/styles/bloks.scss/header.scss
@@ -18,6 +18,7 @@
     box-sizing: border-box;
     background-repeat: no-repeat;
     background-size: cover;
+    max-width: 100vw;
 
     @include onIpad {
       height: 384px;
@@ -28,6 +29,22 @@
     @include onDesktop {
       min-height: 655px;
       max-width: 725px;
+    }
+
+    @include onTablet {
+      min-height: 700px;
+      max-width: 800px;
+    }
+
+    @include onHD {
+      min-height: 800px;
+      max-width: 900px;
+
+    }
+
+    @include onLarge {
+      min-height: 900px;
+      max-width: 1000px;
     }
   }
 
@@ -75,6 +92,22 @@
 
     @include onDesktop {
       margin-left: 55px;
+    }
+
+    @include onTablet {
+      margin-left: 100px;
+    }
+
+    @include onDesign {
+      margin-left: 250px;
+    }
+
+    @include onHD {
+      margin-left: 450px;
+    }
+
+    @include onLarge {
+      margin-left: 650px;
     }
 
     &-title {
