--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,3 +2,5 @@
 @import "./utils/mixins";
 @import "./utils/reset.scss";
 @import "./bloks.scss/header.scss";
+@import "./bloks.scss/events.scss";
+@import "./bloks.scss/classic.scss";
