--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,11 +1,18 @@
+
+@mixin onIphone {
+  @media (min-width:320px) {
+    @content;
+  }
+}
+
 @mixin onIpad {
   @media (min-width:768px) {
     @content;
   }
 }
 
-@mixin onIphone {
-  @media (min-width:320px) {
+@mixin onTablet {
+  @media (min-width:1024px) {
     @content;
   }
 }
@@ -15,3 +22,24 @@
     @content;
   }
 }
+
+@mixin onDesign {
+  @media (min-width:1600px) {
+    @content;
+  }
+}
+
+@mixin onHD {
+  @media (min-width:1920px) {
+    @content;
+  }
+}
+
+@mixin onLarge {
+  @media (min-width:2560px) {
+    @content;
+  }
+}
+
+
+
