--- a/src/styles/utils/reset.scss
+++ b/src/styles/utils/reset.scss
@@ -2,6 +2,8 @@
   font-family: "Montserrat", sans-serif;
   &__body {
     margin: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
   }
 }
 
