--- a/src/styles/bloks.scss/classic.scss
+++ b/src/styles/bloks.scss/classic.scss
@@ -16,7 +16,7 @@
     width: 90vw;
     height: 140px;
     margin: 0 auto;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     text-align: center;
     padding-top: 20px;
 
@@ -47,11 +47,11 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     color: $colordata;
     margin-bottom: 20px;
 
-    &--date{
+    &--date {
       font-weight: 700;
       line-height: 150%;
       color: $colordatatext;
