--- a/src/styles/bloks.scss/events.scss
+++ b/src/styles/bloks.scss/events.scss
@@ -1,6 +1,6 @@
 .events {
   padding: 0 20px;
-    &__title {
+  &__title {
     text-align: center;
     font-weight: 700;
     font-size: 48px;
@@ -48,7 +48,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     color: $colordata;
 
     @include onIpad {
@@ -80,7 +80,7 @@
 
   &__title {
     padding-top: 10px;
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
@@ -98,7 +98,7 @@
       top: 120px;
     }
     &::after {
-      content: '';
+      content: "";
       display: inline-block;
       position: relative;
       bottom: 3px;
@@ -111,7 +111,7 @@
   &__text {
     padding-top: 10px;
     padding-bottom: 60px;
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
@@ -122,10 +122,8 @@
       padding-top: 15px;
       position: relative;
       left: 150px;
-      max-width:370px;
+      max-width: 370px;
       top: 120px;
     }
   }
 }
-
-
