--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,7 @@
 @import "./bloks.scss/header.scss";
 @import "./bloks.scss/events.scss";
 @import "./bloks.scss/classic.scss";
+@import "./bloks.scss/galery.scss";
+@import "./bloks.scss/dots.scss";
+@import "./bloks.scss/subscribe.scss";
+@import "./bloks.scss/form.scss";
