--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -52,11 +52,7 @@
     cursor: pointer;
 
     &:hover {
-      -moz-box-shadow: 1px 1px 5px #999;
-      -webkit-box-shadow: 1px 1px 5px #999;
-      box-shadow: 1px 1px 5px #999;
-      -webkit-transition: all 0.2s ease;
-      transition: all 0.3s ease;
+      transition: 0.3s;
       transform: scale(1.05);
     }
 
