--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,38 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+%Plex300 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
+}
+
+%Plex400 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 400;
+}
+
+%Plex500 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+}
+
+%Plex600 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 600;
+}
+
+%Plex700 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 700;
+}
+
+%Montserrat400 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+
+%Montserrat700 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
