--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,20 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+* {
+  box-sizing: border-box;
 }
+
+@import "./blocks/reset.scss";
+@import "./blocks/page.scss";
+@import "./blocks/image.scss";
+@import "./blocks/title.scss";
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/burger.scss";
+@import "./blocks/events.scss";
+@import "./blocks/galery.scss";
+@import "./blocks/swiper.scss";
+@import "./blocks/form.scss";
+@import "./blocks/footer.scss";
