--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -5,9 +5,9 @@
   max-width: 280px;
   align-items: center;
   text-transform: uppercase;
+  transition: 0.3s ease 0.1s;
 
   &:hover {
-    transition: 0.3s;
     transform: scale(1.1);
   }
 
