--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -69,9 +69,9 @@
     object-position: center;
 
     margin-bottom: 20px;
+    transition: 0.3s ease 0.1s;
 
     &:hover {
-      transition: 0.3s;
       transform: scale(1.1);
     }
   }
@@ -167,9 +167,9 @@
   &__lecture-content {
     position: relative;
     bottom: -150px;
+    transition: 0.3s ease 0.1s;
 
     &:hover {
-      transition: 0.3s;
       transform: scale(1.1);
     }
 
