--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -50,9 +50,9 @@
     height: 100%;
     object-fit: contain;
     cursor: pointer;
+    transition: 0.3s ease 0.1s;
 
     &:hover {
-      transition: 0.3s;
       transform: scale(1.05);
     }
 
