--- a/src/styles/bloks.scss/dots.scss
+++ b/src/styles/bloks.scss/dots.scss
@@ -16,7 +16,7 @@
 
   @for $dotCount from 1 through 5 {
     &--#{$dotCount} span:nth-child(-n+#{$dotCount}) {
-      background: #1A5A4C;
+      background: #1a5a4c;
     }
   }
 
