--- a/src/styles/bloks.scss/galery.scss
+++ b/src/styles/bloks.scss/galery.scss
@@ -46,12 +46,16 @@
       @include onIpad {
         width: 340px;
         height: 543px;
-      };
+      }
 
       @include onDesktop {
         width: unset;
         height: unset;
         max-width: 770px;
+        &:hover {
+          transform: scale(1.1);
+          transition: 0.3s;
+        }
       }
     }
   }
