--- a/src/styles/bloks.scss/header.scss
+++ b/src/styles/bloks.scss/header.scss
@@ -48,6 +48,14 @@
     }
   }
 
+  &__menu-cross {
+    display: block;
+    width: 20px;
+    height: 20px;
+    margin: 23px;
+    background-image: url(../images/cross.svg);
+  }
+
   &__menu-opener {
     position: absolute;
     left: 0;
