--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,6 @@
 @import "./bloks.scss/dots.scss";
 @import "./bloks.scss/subscribe.scss";
 @import "./bloks.scss/form.scss";
+@import "./bloks.scss/grid.scss";
+@import "./bloks.scss/footer.scss";
+@import "./bloks.scss/menu.scss";
