--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -40,3 +40,20 @@
     @content;
   }
 }
+
+@mixin ontextfooter {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 140.62%;
+  color: $colortitle;
+}
+
+@mixin onadressfooter {
+  text-decoration: none;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: $colortitle;
+}
