--- a/src/styles/utils/reset.scss
+++ b/src/styles/utils/reset.scss
@@ -4,9 +4,19 @@
     margin: 0;
     box-sizing: border-box;
     overflow-x: hidden;
+    &--with-menu {
+      overflow: hidden;
+    }
+  }
+  &__main {
+    scroll-behavior: smooth;
   }
 }
 
 h1 {
+  margin: 0;
+}
+
+p {
   margin: 0;
 }
