--- a/src/styles/bloks.scss/form.scss
+++ b/src/styles/bloks.scss/form.scss
@@ -21,9 +21,8 @@
       width: 470px;
     }
 
-
     &::placeholder {
-        color: #687480;
+      color: #687480;
     }
   }
 
@@ -34,7 +33,7 @@
     box-sizing: border-box;
     width: 50px;
     height: 50px;
-    background-color: #F14A27;
+    background-color: #f14a27;
     border: 0;
 
     @include onIpad {
