--- a/src/styles/bloks.scss/subscribe.scss
+++ b/src/styles/bloks.scss/subscribe.scss
@@ -6,30 +6,33 @@
   background-size: cover;
   background-position: bottom;
 
-  &__title{
+  @include onDesktop {
+    margin-top: 200px;
+  }
+
+  &__title {
     margin: 0;
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
     text-align: center;
-    color: #FFFFFF;
+    color: #fff;
 
   }
 
   &__description {
     margin-bottom: 35px;
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 150%;
     text-align: center;
-    color: #FFFFFF;
+    color: #fff;
 
     @include onDesign {
       margin-bottom: 50px;
     }
   }
-
 
 }
