--- a/src/styles/bloks.scss/footer.scss
+++ b/src/styles/bloks.scss/footer.scss
@@ -62,7 +62,7 @@
   }
 
   &__instagram {
-    background-image: url("../images/instagram\ \(3\).png");
+    background-image: url("../images/instagram.png");
     background-repeat: no-repeat;
   }
 
