--- a/src/styles/bloks.scss/form.scss
+++ b/src/styles/bloks.scss/form.scss
@@ -35,6 +35,13 @@
     height: 50px;
     background-color: #f14a27;
     border: 0;
+    transition: $transition9;
+    cursor: pointer;
+    &:hover {
+      border-radius: 15%;
+      transition: $transition9;
+      transform: scale(0.9);
+    }
 
     @include onIpad {
       width: 70px;
