--- a/src/styles/bloks.scss/galery.scss
+++ b/src/styles/bloks.scss/galery.scss
@@ -52,9 +52,11 @@
         width: unset;
         height: unset;
         max-width: 770px;
+        transition: $transition9;
+
         &:hover {
-          transform: scale(1.1);
-          transition: 0.3s;
+          transform: scale(1.05);
+          transition: $transition3;
         }
       }
     }
