--- a/src/styles/bloks.scss/header.scss
+++ b/src/styles/bloks.scss/header.scss
@@ -183,6 +183,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-left: 20px;
       width: 230px;
       height: 50px;
       border: 1px solid $colordatatext;
@@ -206,7 +207,14 @@
       background-image: url(../images/Vector.png);
       background-repeat: no-repeat;
       background-position: 50% 50%;
+      transition: $transition9;
+      cursor: pointer;
 
+      &:hover {
+        border-radius: 15%;
+        transition: $transition9;
+        transform: scale(0.9);
+      }
       @include onIpad {
         height: 70px;
         width: 70px;
