--- a/src/styles/bloks.scss/menu.scss
+++ b/src/styles/bloks.scss/menu.scss
@@ -27,5 +27,12 @@
     text-decoration: none;
     color: $colordatatext;
     font-family: "Montserrat", sans-serif;
+    transition: $transition9;
+    &:hover {
+      color: peru;
+      transition: $transition9;
+
+    }
+
   }
 }
