--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,3 +2,5 @@ $colortitle: #0f0e08;
 $colortext:  #4e4e4e;
 $colordatatext: #1a5a4c;
 $colordata:#687480;
+$transition3: 0.3s;
+$transition9: 0.9s;
