add Style link footer

--- a/src/styles/bloks.scss/header.scss
+++ b/src/styles/bloks.scss/header.scss
@@ -173,6 +173,7 @@
   &__button {
     display: flex;
     width: 320px;
+    text-decoration: none;
 
     @include onDesktop {
       margin-left: 160px;
