--- a/src/styles/bloks.scss/footer.scss
+++ b/src/styles/bloks.scss/footer.scss
@@ -50,6 +50,11 @@
     grid-template-columns: repeat(2, 24px);
     gap: 26px;
     margin-left: auto;
+    // &:hover {
+    //   border-radius: 15%;
+    //   transition: $transition9;
+    //   transform: scale(0.9);
+    // }
     @include onIpad {
       margin-left: 0;
       grid-area: 2 / 1 / 3 / 1;
@@ -59,11 +64,21 @@
   &__facebook {
     background-image: url(../images/Facebook.png);
     background-repeat: no-repeat;
+    transition: $transition9;
+    &:hover {
+      transform: scale(1.3);
+      transition: $transition9;
+    }
   }
 
   &__instagram {
     background-image: url("../images/instagram.png");
     background-repeat: no-repeat;
+    transition: $transition9;
+    &:hover {
+      transform: scale(1.3);
+      transition: $transition9;
+    }
   }
 
   &__titlesceduel {
@@ -96,14 +111,29 @@
 
   &__adress {
     @include onadressfooter;
+    transition: $transition9;
+    &:hover {
+      transform: scale(1.2);
+      transition: $transition9;
+    }
   }
 
   &__number {
     @include onadressfooter;
+    transition: $transition9;
+    &:hover {
+      transform: scale(1.2);
+      transition: $transition9;
+    }
   }
 
   &__email {
     @include onadressfooter;
+    transition: $transition9;
+    &:hover {
+      transform: scale(1.2);
+      transition: $transition9;
+    }
   }
 
   &__link {
@@ -114,6 +144,12 @@
     font-size: 14px;
     line-height: 100%;
     color: $colortitle;
+    transition: $transition9;
+    &:hover {
+      transform: scale(1.3);
+      transition: $transition9;
+      color: orangered;
+    }
   }
 
   &__line {
@@ -141,6 +177,7 @@
   &__data {
     display: flex;
     flex-direction: column;
+    transition: $transition9;
   }
 
   &__designed {
