--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,43 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%base-top-padd-header {
+  padding-top: $padd-top-header;
+
+  @include Tablet {
+    padding-top: 15px;
+  }
+}
+
+%mb-top-action-header {
+  margin-bottom: ($h-header-mobile + 20px - $padd-top-header);
+  
+  @include Tablet {
+    margin-bottom: 40px;
+  }
+
+  @include Desktop {
+    margin-bottom: 120px;
+  }
+}
+
+%ff--Montserrat {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  color: $color-black;
+}
+
+%background-position {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+
+  @include Tablet {
+    left: 52%;
+    width: 48%;
+  }
+
+  @include Desktop {
+    left: 43%;
+    width: 57%;
+  }
 }
