--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import "utils";
-@import "fonts";
-@import "typography";
+@import "reset";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/header.scss";
+@import "./blocks/background.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/top-action.scss";
+@import "./blocks/button.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/current-events.scss";
