--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$main-color: #4e4e4e;
+$color-black: #0f0e08;
+$color-title: #000;
+$color-btn: #1a5a4c;
+$color-orange: #f24223;
+$h-header-mobile: 300px;
+$h-header-tablet: 384px;
+$h-header-desktop: 655px;
+$padd-top-header: 9px;
+$h-btn: 70px;
+
+$max-column-tablet: 6;
+$max-column-desktop: 12;
