--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/mixins";
+@import "./utils/vars";
+@import "./utils/normalize.scss";
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/button.scss";
+@import "./blocks/events.scss";
+@import "./blocks/exhibition.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/container.scss";
