--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,15 @@
-$c-gray: #eee;
+$backgroundColor: #fff;
+$colorWhite: #fff;
+$colorBlack: #0f0e08;
+$colorGray: #687480;
+$colorGreenDark:#4f4f4f;
+$colorRed: #f14a27;
+$buttonBackground: #1a5a4c;
+$colorHover: blue;
+
+$animationTime: 0.3s;
+
+$buttonWidth: 280px;
+$buttonHeight: 50px;
+
+$gridColumns: (1: "1 / 5", 2: "5 / 13", 3: "1 / 9", 4: "9 / 13");
