--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,27 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils";
+@import "./fonts";
+@import "./typography";
+@import "./content/Header";
+@import "./content/events";
+@import "./content/frame";
+@import "./content/gallery";
+@import "./content/form";
+@import "./content/footer";
+@import "./content/terms";
+
+html {
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+}
 
 body {
   background: $c-gray;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  width: none;
+  text-decoration: none;
+  cursor: pointer;
 }
