--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,33 @@
 @mixin hover($_property, $_toValue) {
   transition: #{$_property} 0.3s;
+
   &:hover {
     #{$_property}: $_toValue;
+  }
+}
+
+
+
+@mixin BigScreen {
+  @media (max-width:2560px) {
+    @content;
+  }
+}
+
+@mixin Note {
+  @media (max-width: 1300px) {
+    @content;
+  }
+}
+
+@mixin ipad {
+  @media (max-width:1258px) {
+    @content;
+  }
+}
+
+@mixin mobile {
+  @media (max-width:757px) {
+    @content;
   }
 }
