--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-gray: #eee;
+$primary_color: #0F0E08;
+$secondary_color:#687480;
+$number_color:#1a5a4c;
+$text_color:#4e4e4e;
+$form_color:#ffffff;
+$cube_color: #F14A27;
+$circle_color:#E0E0E0;
