Museum landing page was added

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$colorGreen: #1a5a4c;
+$colorDark: #0f0e08;
+$colorLight: #687480;
+$fontPrimary: "IBM Plex Sans", sans-serif;
+$fontSecondary: "Montserrat", sans-serif;
