--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "../styles/blocks/page.scss";
+@import "../styles/blocks/container.scss";
+@import "../styles/blocks/grid.scss";
+
+@import "../styles/blocks/header.scss";
+@import "../styles/blocks/top-actions.scss";
+@import "../styles/blocks/logo.scss";
+@import "../styles/blocks/icon.scss";
+@import "../styles/blocks/button.scss";
+@import "../styles/blocks/menu.scss";
+@import "../styles/blocks/nav.scss";
+@import "../styles/blocks/events.scss";
+@import "../styles/blocks/lecture.scss";
+@import "../styles/blocks/gallery.scss";
+@import "../styles/blocks/slider.scss";
+@import "../styles/blocks/subscription.scss";
+@import "../styles/blocks/footer.scss";
