--- a/src/styles/content/_Header.scss
+++ b/src/styles/content/_Header.scss
@@ -232,11 +232,11 @@
     font-family: $font_mont;
     width: 0;
     color: $primary_color;
+    text-transform: uppercase;
     transition: ease-in-out 0.3s;
 
     &:hover {
-      color: crimson;
-      font-size: 20px;
+      transform: scale(1.1);
     }
   }
 }
