--- a/src/styles/content/_footer.scss
+++ b/src/styles/content/_footer.scss
@@ -7,7 +7,8 @@
   padding-right: 32px;
   padding-bottom: 35px;
   padding-top: 48px;
-  background: $form_color;
+  background: white;
+
 
 
 
@@ -85,22 +86,26 @@
     display: flex;
   }
 
+ 
+
   &__con1 {
     color: $primary_color;
     font-family: $font_ibm;
     font-weight: 400;
     font-size: 14px;
-    transition: ease-in-out 0.3s;
+  }
 
-    &:hover {
-      color: red;
-    }
+  &__time{
+    color: $primary_color;
+    font-family: $font_ibm;
+    font-weight: 600;
+    font-size: 14px
   }
 
   &__data {
     color: $primary_color;
     font-family: $font_ibm;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 14px
   }
 
