--- a/src/styles/content/_terms.scss
+++ b/src/styles/content/_terms.scss
@@ -8,7 +8,7 @@
   padding-right: 32px;
   padding-top: 36px;
   padding-bottom: 36px;
-  background: $form_color;
+  background: white;
   ;
 
   &__terms {
@@ -26,6 +26,6 @@
     color: $primary_color;
     font-weight: 300;
     font-family: $font_ibm;
-    font-size: 14px;
+    font-size: 12px;
   }
 }
