--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -779,7 +779,6 @@ h1 {
           box-sizing: border-box;
   padding-left: 55px;
   padding-right: 55px;
-  padding-top: 200px;
   padding-bottom: 200px;
   gap: 30px;
 }
@@ -853,8 +852,8 @@ h1 {
 }
 
 .container4__pics:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
 }
 
 .container4__dots {
@@ -1037,6 +1036,7 @@ h1 {
 
 .container5__submit {
   width: 70px;
+  border: none;
   cursor: pointer;
   background: #F14A27;
 }
@@ -1061,7 +1061,7 @@ h1 {
   padding-right: 32px;
   padding-bottom: 35px;
   padding-top: 48px;
-  background: #ffffff;
+  background: white;
 }
 
 @media (max-width: 757px) {
@@ -1148,6 +1148,7 @@ h1 {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  background: red;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
@@ -1235,7 +1236,7 @@ h1 {
   padding-right: 32px;
   padding-top: 36px;
   padding-bottom: 36px;
-  background: #ffffff;
+  background: white;
 }
 
 .container7__terms {
@@ -1262,7 +1263,7 @@ h1 {
   color: #0F0E08;
   font-weight: 300;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 html {
